# sholva

./: .gitignore  Makefile  README.md  cabal.project  check.v  clash-test.cabal  default.nix  derivation.nix  docker.nix  flake.nix  shell.nix  tiny86.blif  tiny86.bristol  tiny86.ins  tiny86.ir0  tiny86.rel  tiny86.v  tiny86.wit  wiztoolkit.nix
.github/: dependabot.yml  pull_request_template.md
.stack-work/: stack.sqlite3
circuit/: decode_opc_phase1.v  fetch.v  mux8_32.v  regfile.v  tiny86.v
circuitous-testing/: README.md  circuit.tb.gen.v  circuit.tb.vcd  convert.trace  out.tb.yml  out.trace  out.v  synth.tcl
clash-testing/: .gitignore  Makefile  README.md  clash-test.cabal
mttn/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  default.nix  derivation.nix
mttn/.github/workflows/: ci.yml
mttn/forcedentry/: Makefile  README.md  forcedentry.cpp
mttn/src/: dump.rs  filesystem.rs  main.rs  syscall.rs  tiny86.rs  trace.rs
mttn/test/: Makefile  alu_adc.s  alu_add.s  alu_add_neg.s  brk.c  brk.gdb  brk_loop.c  brk_loop.gdb  buffer_overflow.nostdlib.c  cdq.s  condition.nostdlib.c  echo.s  empty.c  empty.gdb  getrandom.c  getrandom.gdb  jmp.s  jumptable.nostdlib.c  lea.s  loop_.s  malloc.c  malloc.gdb  memops.s  mmap.c  mmap.gdb  mov_r_r.s  nop.s  print-main.gdb  print-pid.gdb  push_pop.s  push_pop2.s  rcl.s  rol.s  seteip.c  smallcall.c  smallcall.nostdlib.c  stop-at-main.gdb  stosb.s  stosd.s  stosw.s  (+19 more)
mttn/test/log4shell/: Dockerfile
mttn/test/log4shell/OpenJDK-i386/: Makefile
mttn/test/log4shell/vulnerable-app/: Makefile  README.md
src/: Alu.hi  (+8 more)
(+372 files in other folders)
