[package]
name = "mttn"
version = "0.1.0"
authors = ["William Woodruff <william@trailofbits.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.1", features = ["cargo"] }
derivative = "2.2"
env_logger = "0.11"
iced-x86 = "1.21.0"
itertools = "0.12.1"
jsonl = "4.0.1"
libc = "0.2"
log = "0.4"
nix = { version = "0.27.1", features = ["signal", "personality", "ptrace", "uio"] }
parse_int = "0.6.0"
rsprocmaps = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spawn-ptrace = "0.1.2"
